syntax = "proto3";

package spine.test.aggregate.number;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.aggregate.number";
option java_outer_classname = "CommandsProto";
option java_multiple_files = true;

message RejectNegativeInt {
    int32 number = 1;
}

message RejectNegativeLong {
    int64 number = 1;
}

message DoNothing {
}
